# virtual-school-backend

./: .env.example  .flaskenv  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  tasks.txt
docs/: api.md  objects.md  parameters.md
docs/api/: api.md  objects.md
docs/schema/: database-schema.gaphor
docs/scheme/: database-scheme.gaphor
migrations/versions/: c76bd27eb1a9_users_table.py
src/virtual_school_backend/: __init__.py  __main__.py  appkeys.py  config.py  middlewares.py  models.py  setup_logging.py  subapp.py  validators.py
src/virtual_school_backend/auth/: __init__.py  app.py  handlers.py  middlewares.py  tools.py  validation_schemas.py
src/virtual_school_backend/config/: __init__.py  config.py  config.toml  logging.toml
src/virtual_school_backend/main/: __init__.py  handlers.py  routes.py
src/virtual_school_backend/mainpage/: __init__.py  app.py  handlers.py
src/virtual_school_backend/scripts/: __init__.py  init_db.py
src/virtual_school_backend/user/: __init__.py  app.py  handlers.py
tests/: api_auth_test.py  api_test.py  backend_fixture.py  conftest.py  postgresql_fixture.py
