[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-school-backend"
version = "0.1.1"
description = "Backend for virtual school on"
readme = "README.md"
authors = [
    {name = "Andrey Shahov", email = "a.shahov.garlic@yandex.ru"},
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "uvloop",
    "gunicorn",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]
test = [
    "pytest",
]
docs = [
]

[project.scripts]
virtual-school-backend = "virtual_school_backend.__main__:main"

[tool.pip-tools]
generate-hashes = true
allow-unsafe = true
