[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-school-backend"
dynamic = ["version"]
description = "Backend for virtual school on aiohttp"
readme = "README.md"
authors = [
    {name = "Andrey Shahov", email = "a.shahov.garlic@yandex.ru"},
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "pytest-aiohttp",
    "uvloop",
    "psycopg[binary, pool]",
    "python-dotenv",
    "pyjwt[crypto]",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]
test = [
    "pytest",
]
docs = [
]

[project.scripts]
virtual-school-backend = "virtual_school_backend.__main__:main"
init_db = "virtual_school_backend.scripts.init_db:init_db"

[tool.setuptools.dynamic]
version = {attr = "virtual_school_backend.__version__"}

[tool.pip-tools]
generate-hashes = true
allow-unsafe = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "-rfsE"] 
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_functions = "*_test"
python_classes = "Test*"
python_files = "*_test.py"
pythonpath = ["src"]
minversion = 7.0
